refactor: updated unit tests in plaid service to seperate functionality more clear and to no longer account for filtering functionality